--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactfolio",
   "private": true,
   "version": "1.9.0",
+  "homepage": "https://neerajnagar.com",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -29,7 +30,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "gh-pages": "^6.1.1",
+    "gh-pages": "^6.3.0",
     "globals": "^13.24.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
